Sonarqube passed but there are still some warning of type resolution